k8s/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conva-service
  namespace: conva-prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
spec:
  selector:
    app: conva
    environment: production
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
